--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/cv_post_card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="5dp">
 
         <RelativeLayout
@@ -20,31 +19,22 @@
             <TextView
                 android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:hint="Message" />
+                android:layout_height="50dp"/>
 
             <TextView
                 android:id="@+id/tvDate"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvMessage"
-                android:layout_toStartOf="@+id/tvViews"
-                android:hint="asdasd" />
+                android:layout_toStartOf="@+id/tvViews"/>
 
             <TextView
                 android:id="@+id/tvViews"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@+id/tvMessage"
-                android:hint="123" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_below="@id/tvViews"
-                android:background="#F3F3F3" />
+                android:layout_below="@+id/tvMessage" />
 
         </RelativeLayout>
 
