--- a/app/src/main/res/layout/activity_create_posts.xml
+++ b/app/src/main/res/layout/activity_create_posts.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +11,7 @@
         android:background="@drawable/borders"
         android:maxLines="4"
         android:lines="4"
-        android:hint="What would you like to share?"
+        android:hint="@string/hint"
         android:layout_margin="20dp"
         android:padding="10dp"/>
 
@@ -26,7 +25,7 @@
         android:layout_marginRight="20dp"
         android:padding="10dp"
         android:background="@color/com_facebook_button_background_color"
-        android:text="Post"
+        android:text="@string/post"
         android:textColor="#FFF"
         />
 
@@ -40,7 +39,7 @@
         android:layout_marginEnd="20dp"
         android:padding="10dp"
         android:background="@color/com_facebook_button_background_color"
-        android:text="Save"
+        android:text="@string/save"
         android:textColor="#FFF"
         />
 
